# Incognitalk

./: .gitignore  CMakeLists.txt  README.md  TLVBinaryProtocal.md  format.md
.cache/clangd/index/: client.c.374D16EA4A7D8C08.idx  client.h.4D74AC3CC8EB7CFB.idx  server.c.B16EBDFA930AD0E8.idx  server.h.2E58561483FA5A60.idx
include/: client.h  server.h
src/: benchmark.c  gen_benchmark_keys.c
src/client/: client.c  client_api.c  crypto_api.c
src/server/: server.c  server_api.c
